--- a/source/sass/blocks/filter-v2.scss
+++ b/source/sass/blocks/filter-v2.scss
@@ -93,7 +93,7 @@
     flex-direction: column;
     padding: 21px 17px;
 
-    .form-select {
+    .form-select-custom {
       & .ss-content {
         left: 72px;
       }
