--- a/source/sass/style-v2.scss
+++ b/source/sass/style-v2.scss
@@ -55,6 +55,7 @@
 @import "blocks/filter-vote";
 @import "blocks/counter";
 @import "blocks/paginator";
+@import "blocks/paginator-v2";
 @import "blocks/button-star";
 @import "blocks/button-remove";
 @import "blocks/page-404";
