New page ready for test

--- a/source/components/header-v2-logged-in.html
+++ b/source/components/header-v2-logged-in.html
@@ -45,7 +45,7 @@
           <span class="user-menu__user-name">Анастасия</span>
 
           <svg class="user-menu__dropdown-icon" width="13" height="13">
-            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
+            <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
           </svg>
         </button>
 
@@ -117,7 +117,7 @@
           <span class="user-menu__user-name">Анастасия</span>
 
           <svg class="user-menu__dropdown-icon" width="13" height="13">
-            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
+            <use xlink:href="img/sprite.svg#icon-arrow-big"></use>
           </svg>
         </button>
 
