--- a/source/sass/style-v2.scss
+++ b/source/sass/style-v2.scss
@@ -93,6 +93,7 @@
 @import "blocks/zoom-button";
 @import "blocks/zoom-button-v2";
 @import "blocks/preview-input";
+@import "blocks/preview-input-v2";
 @import "blocks/info-banner";
 @import "blocks/info-banner-v2";
 @import "blocks/info-banner-button";
@@ -138,6 +139,7 @@
 @import 'blocks/numbered-list';
 @import 'blocks/personal-news';
 @import 'blocks/personal-poll';
+@import 'blocks/personal-poll-v2';
 @import 'blocks/cluster-icon';
 @import 'blocks/map-buttons';
 @import 'blocks/popover';
@@ -145,6 +147,7 @@
 @import 'blocks/curator';
 @import 'blocks/project-rules';
 @import 'blocks/additional';
+@import 'blocks/additional-v2';
 @import 'blocks/landscaping';
 @import 'blocks/landscaping-form';
 @import 'blocks/notification';
@@ -167,6 +170,8 @@
 @import 'blocks/single-news';
 @import 'blocks/choices-custom';
 @import 'blocks/preloader';
+@import 'blocks/expand-v2';
+@import 'blocks/share-v2';
 
 
 // main page
