--- a/source/sass/variables-v2.scss
+++ b/source/sass/variables-v2.scss
@@ -59,3 +59,4 @@ $border-radius: 5px;
 $style-change-duration: 0.2s;
 $style-change-duration-slow: 0.4s;
 
+$box-shadow: 0px 2px 4px rgba(0, 30, 75, 0.15);
