--- a/source/sass/blocks/composite-poll-v2.scss
+++ b/source/sass/blocks/composite-poll-v2.scss
@@ -1,11 +1,12 @@
 .composite-poll__description {
   margin: 0;
   padding: 32px;
+  margin-bottom: 24px;
 
   font-weight: 400;
   font-size: rem(16px);
   line-height: 150%;
-  color: $dark-text;
+  color: var(--color-text, $dark-text);
 
   background-color: var(--color-blue, $color-bg);
   border-radius: 5px;
@@ -22,5 +23,284 @@
 
   p {
     margin: 0;
+  }
+}
+
+.composite-poll {
+  &__header {
+    padding: 24px 32px;
+    background-color: var(--color-bg-secondary, $blue-default);
+    color: var(--color-text, $white);
+    display: flex;
+    justify-content: space-between;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+
+    &:only-child {
+      border-radius: 5px;
+    }
+
+    @include mobile {
+      flex-direction: column-reverse;
+      padding: 23px 12px 20px;
+    }
+  }
+
+  &__block {
+    border-radius: 5px;
+    padding: 40px 32px;
+
+    @include mobile {
+      padding: 23px 12px 19px;
+    }
+
+    &--title {
+      padding: 0 32px 38px 32px;
+      border-top: 8px solid $blue-default;
+
+      @include mobile {
+        padding: 23px 12px 32px;
+      }
+    }
+
+    &--info {
+      padding: 0;
+    }
+
+    .back-btn {
+      margin-top: 33px;
+      margin-bottom: 43px;
+
+      @include mobile {
+        margin-top: 0;
+        margin-bottom: 24px;
+      }
+    }
+
+    .expand__header {
+      border-top: 1px solid transparent;
+      padding-top: 24px;
+
+      .is-opened {
+        border-color: #DFE3EA;
+      }
+    }
+  }
+
+  &__title {
+    line-height: 150%;
+    margin-bottom: 32px;
+
+    @include mobile {
+      font-size: rem(24px);
+      line-height: 120%;
+      word-break: break-word;
+    }
+  }
+
+  &__body {
+    padding: 35px 32px 40px;
+
+    @include mobile {
+      padding: 23px 12px 20px 12px;
+    }
+  }
+
+  &__info {
+    h3 {
+      font-weight: 500;
+      font-size: rem(24px);
+      line-height: 120%;
+      margin: 0;
+
+      @include mobile {
+        font-size: rem(20px);
+      }
+    }
+
+    p {
+      font-weight: 400;
+      font-size: rem(15px);
+      line-height: 180%;
+      margin: 0;
+      margin-top: 12px;
+
+      @include mobile {
+        font-size: rem(14px);
+        line-height: 130%;
+      }
+    }
+  }
+
+  &__pages {
+    @include mobile {
+      margin-bottom: 12px;
+    }
+
+    p {
+      font-weight: 400;
+      font-size: rem(16px);
+      line-height: 135%;
+      display: flex;
+      margin: 0;
+
+      @include mobile {
+        font-size: rem(14px);
+        line-height: 130%;
+      }
+    }
+
+    span:first-of-type {
+      font-weight: 600;
+      font-size: rem(16px);
+      line-height: 24px;
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-self: center;
+      color: var(--color-text, $blue-default);
+      background-color: var(--color-bg-main, $white);
+      margin: 0 6px 0 12px;
+    }
+  }
+
+  &__text {
+    font-weight: 500;
+    font-size: rem(18px);
+    line-height: 22px;
+    margin-bottom: 24px;
+
+    @include mobile {
+      font-size: rem(14px);
+      line-height: 130%;
+      margin-bottom: 17px;
+    }
+  }
+
+  &__table {
+    max-height: 620px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 130%;
+    color: $light-text;
+    border: 1px solid #E3E8EE;
+    border-radius: 5px;
+
+    .simplebar-track .simplebar-scrollbar.simplebar-visible::before {
+      opacity: 0.6;
+      background-color: #DFE3EA;
+    }
+
+    table {
+      height: 1px; // will be ignored, need for 100% span height
+    }
+
+    td {
+      padding: 16px 24px;
+      min-width: 310px;
+      line-height: 135%;
+      font-size: rem(16px);
+
+      &:first-of-type {
+        min-width: 550px;
+      }
+
+      @include mobile {
+        min-width: 305px;
+
+        &:first-of-type {
+          min-width: 305px;
+        }
+      }
+
+      .form-radio label {
+        align-self: center;
+      }
+
+      @include mobile {
+        font-size: rem(14px);
+        line-height: 130%;
+        padding: 16px 12px;
+      }
+    }
+
+    tr:not(:first-of-type) {
+      border-bottom: 1px solid #DFE3EA;
+    }
+
+    tr:nth-of-type(2) td {
+      padding-top: 23px;
+    }
+
+    th {
+      padding: 16px 0;
+      background-color: var(--color-bg-secondary, $color-bg);
+      vertical-align: top;
+      height: 100%;
+
+      span {
+        display: block;
+        height: 100%;
+        padding: 0 21px;
+        border-right: 1px solid #DFE3EA;
+
+        @include mobile {
+          font-size: rem(14px);
+          line-height: 130%;
+          padding: 0 10px;
+        }
+      }
+    }
+  }
+
+  &__description {
+    margin-bottom: 38px;
+
+    @include mobile {
+      padding: 16px;
+      font-size: rem(14px);
+      line-height: 130%;
+      margin-bottom: 30px;
+    }
+  }
+
+  .additional {
+    margin-bottom: 24px;
+  }
+
+  .notification-block {
+    margin-top: 24px;
+  }
+
+  .info-block {
+    margin-bottom: 31px;
+  }
+
+  .form__question {
+    margin-bottom: 14px;
+
+    @include mobile {
+      line-height: 150%;
+    }
+  }
+
+  .form__description {
+    margin-bottom: 20px;
+  }
+
+  .form-radio,
+  .form-checkbox {
+    margin-bottom: 13px;
+  }
+
+  .form-radio:last-of-type,
+  .form-checkbox:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .form-range {
+    margin-bottom: 0;
   }
 }
