--- a/source/sass/blocks/composite-poll.scss
+++ b/source/sass/blocks/composite-poll.scss
@@ -67,13 +67,13 @@
 }
 
 .composite-poll__button {
-  font-size: 14px;
+  font-size: rem(14px);
   line-height: 19px;
 }
 
 .composite-poll {
   .form__question {
-    font-size: 16px;
+    font-size: rem(16px);
     line-height: 22px;
     margin-bottom: 24px;
   }
