--- a/source/sass/blocks/file-item.scss
+++ b/source/sass/blocks/file-item.scss
@@ -82,7 +82,7 @@
     justify-content: space-between;
 
     @include mobile {
-      flex-direction: column;
+      //flex-direction: column;
       padding-top: 3px;
     }
   }
@@ -93,7 +93,7 @@
 
   @include mobile {
     margin-left: auto;
-    margin-top: 8px;
+    //margin-top: 8px;
   }
 }
 
