--- a/source/sass/blocks/form-v2.scss
+++ b/source/sass/blocks/form-v2.scss
@@ -4,3 +4,19 @@
     background-color: $color-bg;
   }
 }
+
+.form__question {
+  @include mobile {
+    font-size: rem(16px);
+    line-height: 150%;
+    margin-bottom: 12px;
+  }
+}
+
+.form__description {
+  @include mobile {
+    margin-bottom: 26px;
+    font-size: rem(14px);
+    line-height: 130%;
+  }
+}
