--- a/source/sass/blocks/project-v2.scss
+++ b/source/sass/blocks/project-v2.scss
@@ -1,7 +1,7 @@
 .section .project {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  //margin: 0;
   list-style: none;
 }
 
@@ -82,6 +82,7 @@
 
 .row .project__item {
   width: 100%;
+  height: 100%;
 }
 
 .project__icon {
