--- a/source/sass/blocks/user-menu-v2.scss
+++ b/source/sass/blocks/user-menu-v2.scss
@@ -1,3 +1,7 @@
 .user-menu__user-icon {
   color: var(--color-text, $blue-default);
 }
+
+.user-menu__dropdown-icon {
+  color: var(--color-text, $dark-text);
+}
