--- a/source/sass/style-v2.scss
+++ b/source/sass/style-v2.scss
@@ -74,6 +74,7 @@
 @import "blocks/video-link";
 @import "blocks/video-link-v2";
 @import "blocks/special-popup";
+@import "blocks/special-popup-v2";
 @import "blocks/status-info";
 @import "blocks/status-info-v2";
 @import "blocks/info-tooltip";
@@ -255,6 +256,7 @@
 
 // poll page
 @import "blocks/poll-page";
+@import "blocks/poll-page-v2";
 
 // news-item
 @import "blocks/news-item";
